@@ -1555,6 +1555,9 @@ Only set if the \fB\-\-cpus\-per\-task\fR option is specified.
 \fBSLURM_DISTRIBUTION\fR
 Same as \fB\-m, \-\-distribution\fR
 .TP
+\fBSLURM_JOB_ACCOUNT\fR
+Account name associated of the job allocation.
+.TP
 \fBSLURM_JOB_ID\fR (and \fBSLURM_JOBID\fR for backwards compatibility)
 The ID of the job allocation.
 .TP
@@ -1574,6 +1577,12 @@ Total number of nodes in the job allocation.
 .TP
 \fBSLURM_JOB_PARTITION\fR
 Name of the partition in which the job is running.
+.TP
+\fBSLURM_JOB_QOS\fR
+Quality Of Service (QOS) of the job allocation.
+.TP
+\fBSLURM_JOB_RESERVATION\fR
+Advanced reservation containing the job allocation, if any.
 .TP
 \fBSLURM_MEM_BIND\fR
 Set to value of the \-\-mem_bind\fR option.
