@@ -1886,6 +1886,9 @@ Name of the partition in which the job is running.
 \fBSLURM_JOB_QOS\fR
 Quality Of Service (QOS) of the job allocation.
 .TP
+\fBSLURM_JOB_RESERVATION\fR
+Advanced reservation containing the job allocation, if any.
+.TP
 \fBSLURM_LOCALID\fR
 Node local task ID for the process within a job.
 .TP
