@@ -2627,6 +2627,9 @@ Name of the partition in which the job is running.
 .TP
 \fBSLURM_JOB_QOS\fR
 Quality Of Service (QOS) of the job allocation.
+.TP
+\fBSLURM_JOB_RESERVATION\fR
+Advanced reservation containing the job allocation, if any.
 
 .TP
 \fBSLURM_LAUNCH_NODE_IPADDR\fR
